makes the grids on the user stats bar work better

--- a/app/components/HomePageComponents/homePage.css
+++ b/app/components/HomePageComponents/homePage.css
@@ -1,5 +1,5 @@
 .mainComponent {
-  height: 200px;
+  height: 100%;
 }
 
 #homePageGrid {
@@ -10,4 +10,8 @@
 
 .gridItem {
   width: 100%;
+}
+
+.content-element{
+  margin-top: 0px;
 }
