--- a/app/components/HomePageComponents/userStats/userStats.css
+++ b/app/components/HomePageComponents/userStats/userStats.css
@@ -5,6 +5,8 @@
   z-index: 0;
   margin-top: -80px;
   position: relative;
+  border-top-right-radius: 25px;
+
 
 }
 
@@ -17,6 +19,7 @@
   border-radius: 50%;
   margin-top: -140px;
   position: relative;
+
 }
 
 #userCenterIcon {
@@ -27,6 +30,14 @@
   z-index: 2;
   border-radius: 50%;
   position: relative;
+}
+
+#mainPanel {
+  padding-top: 10px;
+}
+
+#userDataBox{
+  padding-top: 75px;
 }
 
 .text-left{
@@ -45,4 +56,16 @@
 
 .gridItem {
   width: 100%;
+}
+
+#userInfoGrid {
+  padding-bottom: 20px;
+  border-bottom: 1px solid yellow;
+}
+#userStatsGrid{
+  padding-top: 20px;
+}
+
+.userStatsGridItem{
+  padding-bottom: 20px;
 }
